# 2021-ansible-gluon-test

./: .gitignore  README.md  cygnus-5.yml  gw-monitroing.yml  gw-playbook-he-net.yml  gw-playbook.yml  hosts.yml  pyproject.toml  requirements.yml
.config/: ansible-lint-ignore.txt  ansible-lint.yml
collections/ansible_collections/freifunk_potsdam/gluon/: README.md  galaxy.yml
collections/ansible_collections/freifunk_potsdam/gluon/changelogs/: config.yaml
collections/ansible_collections/freifunk_potsdam/gluon/roles/batman_adv/: README.md
collections/ansible_collections/freifunk_potsdam/gluon/roles/bind_server/: README.md
collections/ansible_collections/freifunk_potsdam/gluon/roles/default_network/: README.md
collections/ansible_collections/freifunk_potsdam/gluon/roles/fastd_server/: README.md
collections/ansible_collections/freifunk_potsdam/gluon/roles/gw2gw_l2tp/: README.md
doc/images/: arch-mini.drawio
group_vars/all/: bind_server.yml  caddy.yml  domains.yml  gw2gw_l2tp.yml  isc_dhcp_server.yml  librespeed.yml  nftables.yml  policy_routing.yml  prometheus_node_exporter.yml  ssh_hardening.yml  system_packages.yml  systemd-journald.yml  tunneldigger_client.yml  users.yml  vault_caddy.yml  wireguard_client.yml
host_vars/chapek-9/: default_network.yml  domains.yml  he_net_tunnel.yml  nftables.yml  users.yml  wireguard_client.yml
host_vars/cygnus-5/: nftables.yml  users.yml
host_vars/gw-monitoring/: grafana_container.yml  nftables.yml  ssh_hardening.yml
host_vars/gw1/: bind_server.yml  default_network.yml  nftables.yml  wireguard_client.yml
host_vars/gw2/: default_network.yml  wireguard_client.yml
host_vars/gw3/: default_network.yml  domains.yml  nftables.yml  ssh_hardening.yml  wireguard_client.yml
(+102 files in other folders)
