[tool.poetry]
name = "ffp-gluon-test"
version = "0.1.0"
description = "Ansible FFP Gluon Test Setup"
authors = ["Hannes Fuchs <hannes.fuchs@gmx.org>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
ansible = "^7.2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
# https://github.com/ansible/ansible-lint/issues/2730#issuecomment-1330406601
ansible-lint = { version = "^6.12.0", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
